2008-07-18  Les Harris  <me@lesharris.com>

	* src/mud-tray.c: Set the icon name for all
	tray states to gnome-mud to prevent some harmless
	Gtk-CRITICAL's from showing up at runtime.

2008-07-18  Les Harris  <me@lesharris.com>

	* configure.ac: Updated icon Makefiles, removed obsolete
	header and function checks.

	* src/Makefile.am: Added gnome-mud-icons.h.

	* src/gnome-mud-icons.h: A new header which holds a
	definition of our icon's name.

	* src/gnome-mud.c: Properly set our icon based on our
	icon name rather than pointing to a file. Removed
	obsolete python code.

	* src/mud-tray.c: Removed references to our connection
	status icons, properly set our tray icon based on our
	icon name.

2008-07-18  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: Comment out all references to mapper and MCCP
	support, these features need to be rewritten in a future release.

2008-07-18  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am: Make schema installation conditional to
	GCONF_SCHEMAS_INSTALL.

	* gnome-mud.schemas.in: Remove "charset" from a string.
	* ui/prefs.glade: Mark a string as non-translatable.

2008-07-18  Jordi Mallach  <jordi@sindominio.net>

	* Get rid of all .cvsignore files, and add svn:ignore properties as
	needed.

	* configure.ac, doc/Makefile.am: Don't ship the GNOME-Mud manual
	for now, as it's outdated and not yet migrated to PO format.

	* configure.ac, src/Makefile.am, src/pixmaps, src/svg: Get rid of the
	old icons from the distribution.
	* src/Makefile.am, src/mud-tray.c: use the new SVG icon path for
	the tray icon.

	* src/Makefile.am: Fix typo in a filename which broke make dist.

2008-06-30  Les Harris  <me@lesharris.com>

	* configure.ac: Made gstreamer0.10 a conditional option, cleaned up
	a bit.

	* src/Makefile.am: Added MSP_CFLAGS and MSP_LIBS to build parameters.

	* src/gnome-mud.c, src/mud-connection-view.c,
	src/mud-telnet-handlers.[ch], src/mud-telnet-msp.[ch],